--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.h2{
   text-align: center;
+  color: white;
+  font-weight: 400;
+  padding: 20px;
+  background-color: #4472C4;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.add-retrv{
+  display: flex;
+  gap: 12px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn btn1{
+  padding: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main,.getinfo{
+  margin-left: 120px;
+  padding: 20px 0px;
+}
+.add-details ,.retrive-details{
+  width: 70vw;
+  height: 70vh;
+  /* margin-left: 120px; */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* background-color: red; */
+  border: 1px solid black;
+  margin-top: 10px;
+}
+.add,.rettrv{
+  /* border-top: none; */
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+  max-width: 200px;
+  text-align: center;
+  padding: 10px;
+}
+td{
+  padding: 1px solid red;
+}
+table{
+  padding: 5px;
+  width: 100%;
+  border: 1px solid black;
+}
+th{
+  padding: 10px;
+  border: 1px solid black;
+  background-color: #4472C4;
+  /* border: 1px solid black; */
+}
+td{
+  
+  text-align: center;
+  padding: 5px;
+  border: 1px solid black;
+  /* width: 80%; */
+  /* background-color: #4472C4; */
+  
+}
+.add1{
+  margin-top: 200px;
+  margin-left: 84%;
+  background-color: #4472C4;
+  width: fit-content;
+  cursor: pointer;
+  color: white;
+  padding: 5px 50px;
+  
+}
+.details-find{
+  border: 1px solid black;
+  max-width: 200px;
+  padding: 5px;
+  margin-left: 20px;
+}
+.btn2{
+  background: none;
+  border: none;
+  color: blue;
+  border-bottom: 1px solid blue;
+}
+.td-1{
+  display: flex;
+  gap: 15px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px;
+}
+.add-retrv{
+  display: flex;
+  padding: 10px 0px;
+  margin-left: 20px;
+}
+.add-person button,.retrv button{
+  padding: 6px 30px;
+  background-color: #4472C4;
+  border: none;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.search-find{
+  display: flex;
+  gap: 10px;
+  padding: 50px 0px ;
+  margin-left: 20px;
 }
+.search{
+width: 200px;
+font-size: 20px;
+padding: 10px 0px;
+}
+.find{
+  width: 100px;
+  background-color: #4472C4;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  /* padding: 10px 0px; */
+}
+.nodata{
+  text-align: center;
 }
